--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "next": "^9.4.4",
