--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-quill": "^1.3.5",
     "reactstrap": "^8.4.1"
   },
   "devDependencies": {},
