--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.26.0",
     "next": "^9.4.4",
     "nprogress": "^0.2.0",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-quill": "^1.3.5",
